# fbconsole

./: CMakeLists.txt  FBConsole.cpp  FBConsole.hpp  I_Framebuffer.hpp  LICENSE  README.md  fb_setup.cpp  fb_setup.hpp  gamefont.hpp  ili9341.cpp  ili9341.hpp  main.cpp  vgafb.cpp  vgafb.hpp
